--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: denik_zza
-description: "A new Flutter project."
+description: "Zdravotnický deník pro táborové zdravottníky"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.0+1
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #My dependencies
+  drift: ^2.14.1 # https://pub.dev/packages/drift - ORM
+  path_provider: ^2.1.1 # https://pub.dev/packages/path_provider - get path to local storage
+  state_persistence: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +49,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
+  #My dev dependencies
+  drift_dev: ^2.14.1 # https://pub.dev/packages/drift_dev - ORM dev tools
+  build_runner: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
