fix: profile pic.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: denik_zza
-description: "Zdravotnický deník pro táborové zdravottníky"
+description: "Zdravotnický deník pro táborové zdravotníky"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -71,6 +71,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/doc.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
