change: fonts added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,3 +104,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: CourierPrime
+      fonts:
+        - asset: fonts/CourierPrime-Regular.ttf
+          style: normal
+        - asset: fonts/CourierPrime-Bold.ttf
+          weight: 700
+        - asset: fonts/CourierPrime-BoldItalic.ttf
+          weight: 600
+        - asset: fonts/CourierPrime-Italic.ttf
+          style: italic
+
+
