--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.0
   path: ^1.8.3
 
+  sqlite3: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
